--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -28,7 +28,7 @@
         <nav class="menu">
   <h1 class="title"><a href=".">LuaRadio</a></h1>
   <p align="center">
-      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.1.0</code></a>
+      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/ChangeLog.md"><code class="version">v0.1.1</code></a>
   </p>
   <div class="toc">
     <ul>
@@ -69,7 +69,7 @@
 <nav class="scroll-toc">
   <h1 class="title"><a data-scroll href="#top">LuaRadio</a></h1>
   <p align="center">
-    <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.1.0</code></a>
+    <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.1.1</code></a>
   </p>
   <div class="toc">
     <span class="page-title"><a data-scroll href="#top">New to SDR?</a></span>
@@ -308,7 +308,7 @@ testing on a variety of dongles, including these two.</p>
 
 <h2 id="antennas">Antennas</h2>
 
-<p>Perhaps the most “software undefined” component of software-defined radio is
+<p>Perhaps the most “software-undefined” component of software-defined radio is
 the antenna. It is also one of most important. Good reception on a particular
 frequency band primarily depends on the antenna configuration. Antennas vary
 in design frequency, bandwidth, directionality, and polarization, and different
