update docs and examples with wording changes

--- a/examples/rtlsdr-rds.html
+++ b/examples/rtlsdr-rds.html
@@ -94,7 +94,7 @@ demodulated FM spectrum, the BPSK spectrum, and the BPSK constellation.</p>
 
 <p>This example can be used with FM Broadcast radio stations, like the <a href="rtlsdr-wbfm-mono.html">WBFM
 Mono</a> and <a href="rtlsdr-wbfm-stereo.html">WBFM Stereo</a>
-examples, but may require a decent antenna or a strong station.</p>
+examples.</p>
 
 <p>This RDS receiver composition is available in LuaRadio as the
 <a href="../docs/reference-manual.html#rdsreceiver"><code class="highlighter-rouge">RDSReceiver</code></a> block.</p>
