fix typos in new to sdr guide

--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -176,7 +176,7 @@ antenna as electromagnetic waves.</p>
 radios internally, as more of their processing is pushed into the digital
 domain, and more complex protocols demand integrated CPUs.  However, they are
 still tightly integrated black boxes that are designed to operate on a specific
-frequency band, while software-defined radios provide a raw sample interface
+frequency band, whereas software-defined radios provide a raw sample interface
 and tend to have a wide tuning range.</p>
 
 <h3 id="current-state">Current State</h3>
@@ -217,7 +217,7 @@ more advanced discussions.</p>
 can receive. It can be thought of as the width of the SDR’s window into the RF
 spectrum.  This is usually in the range of 1 to 10 MHz for entry-level SDR
 receivers, and in the 20 to 60 MHz range for the more advanced SDR
-transreceivers.  Bandwidth is different from tuning frequency; rather, more
+transceivers.  Bandwidth is different from tuning frequency; rather, more
 bandwidth means that the SDR receiver can capture a wider window of signals
 simultaneously when tuned to a particular frequency. In some cases, more
 bandwidth is required to capture a very wide signal, like a 6 MHz wide DVB-T
@@ -317,7 +317,7 @@ applications demand different requirements in these properties.</p>
 <p>An antenna’s physical size is typically proportional to the wavelengths it is
 designed to receive. For example, antennas designed for reception at 15 MHz
 tend to be much larger than those intended for 100 MHz, and especially larger
-than a WiFi antenna intended for the 2.4 GHz.</p>
+than a WiFi antenna intended for 2.4 GHz.</p>
 
 <figure class="float-right">
 <img src="./images/rtlsdr-stock-antenna-thumb.jpg" />
@@ -378,11 +378,11 @@ Below is a Linux-biased sampling of active SDR software projects.</p>
 
 <p>Waterfall receivers are characterized by a real-time vertical
 <a href="https://en.wikipedia.org/wiki/Spectrogram">spectrogram</a>, showing the frequency
-domain of the SDR receiver’s passband over time.  Waterfall receivers simulate
-many functions of a wideband hardware RF receiver, like tuning, demodulation
-modes, filters, and listening to and recording demodulated audio. Waterfall
-receivers are useful for exploring the RF spectrum and selectively demodulating
-parts of it.</p>
+spectrum of the SDR receiver’s passband over time.  Waterfall receivers
+simulate many functions of a wideband hardware RF receiver, like tuning,
+demodulation modes, filters, and listening to or recording demodulated audio.
+Waterfall receivers are useful for exploring the RF spectrum and selectively
+demodulating parts of it.</p>
 
 <div align="center">
 <figure>
@@ -408,8 +408,8 @@ etc.</p>
 
 <ul>
 <li><a href="https://github.com/EliasOenal/multimon-ng"><i class="fa fa-github" aria-hidden="true"></i> multimon-ng</a></li>
-<li><a href="https://github.com/antirez/dump1090"><i class="fa fa-github" aria-hidden="true"></i> dump1090</a></li>
 <li><a href="https://sourceforge.net/projects/fldigi/"><i class="fa fa-link" aria-hidden="true"></i> fldigi</a></li>
+<li><a href="https://github.com/antirez/dump1090"><i class="fa fa-github" aria-hidden="true"></i> dump1090</a></li>
 <li>and many more...</li>
 </ul>
 
@@ -469,9 +469,10 @@ different radio frequencies have different interactions with the atmosphere and
 earth, and this affects their propagation. Propagation on certain bands may be
 sensitive to time of day, space weather, and solar weather. Propagation on
 other radio bands may depend mostly on line of sight, and may be only sensitive
-to terrestrial weather. The atmosphere may also present more or less opacity to
-outer space, depending on the radio band.  In effect, the various radio bands
-offer varying locality, which enables different kinds of communication.</p>
+to terrestrial weather. The atmosphere may also present more or less opacity
+for different frequencies to outer space, depending on the radio band.  In
+effect, the various radio bands offer varying locality, which enables different
+kinds of communication.</p>
 
 <p>The bandwidth for each ITU band is not divided equally, but rather
 logarithmically. Each subsequent band has approximately ten times the bandwidth
@@ -491,8 +492,8 @@ related reasons that this would be a bad idea.</p>
 you can fit in the band, especially if the band is shared among multiple users.
 For digital signals, this also dictates the maximum achievable data rate (see
 <a href="https://en.wikipedia.org/wiki/Channel_capacity">channel capacity</a>). This is
-one reason that high data rate wireless technologies today occupy spectrum up
-in the gigahertz.</p>
+one reason that high data rate wireless technologies today occupy spectrum in
+bands up in the gigahertz.</p>
 
 <p>Below is a tour of the more common ITU frequency bands, including their primary
 mode of propagation and what kind of signals can be found on them. These
@@ -657,7 +658,7 @@ superseded by the internet, it still continues to serve rural communities, and
 is slowly undergoing a modernization push towards digital, with protocols like
 <a href="https://en.wikipedia.org/wiki/Digital_Radio_Mondiale">Digital Radio Mondiale</a>,
 or Voice of America’s pilot <a href="http://voaradiogram.net/">Radiogram</a> project,
-which carries news text and images over a digital protocol called <a href="https://en.wikipedia.org/wiki/Olivia_MFSK">Olivia
+which carries news text and images over <a href="https://en.wikipedia.org/wiki/Olivia_MFSK">Olivia
 MFSK</a>.</p>
 
 <p>It’s important to point out that while the internet is decentralized in
@@ -717,7 +718,7 @@ Identification
 System</a> (AIS) is
 a position reporting system used by ships, located at the end of the Marine VHF
 band. AIS uses a ~10 kHz wide digital
-<a href="https://en.wikipedia.org/wiki/Minimum-shift_keying#Gaussian_minimum-shift_keying">GSMK</a>
+<a href="https://en.wikipedia.org/wiki/Minimum-shift_keying#Gaussian_minimum-shift_keying">GMSK</a>
 modulation.</p>
 
 <p>Amateur radio typically has two main allocations on VHF, the <a href="https://en.wikipedia.org/wiki/6-meter_band">6 meter
@@ -780,8 +781,8 @@ DAB/DAB+ is the leading standard in replacing analog FM broadcast radio in most
 of the world.</p>
 
 <p>Approximately 20% of the UHF band is allocated for cellular technologies.  The
-precise allocations vary by region, and depending on the carrier that owns the
-band, may carry different protocols, e.g. GSM (2G), UMTS (3G), or LTE (4G).
+allocations vary by region, and depending on the carrier that owns the band,
+may carry different protocols, e.g. GSM (2G), UMTS (3G), or LTE (4G).
 Allocations tend to exist near 800 to 900 MHz and near 1700 to 2200 MHz bands.
 See the <a href="https://en.wikipedia.org/wiki/Cellular_frequencies">cellular
 frequencies</a> page on
@@ -789,14 +790,14 @@ Wikipedia for more information.</p>
 
 <p>An important set of international allocations are the <a href="https://en.wikipedia.org/wiki/ISM_band">Industrial, Scientific
 and Medical</a> (ISM) bands. Despite their
-catch-all name, the vast majority of low power local wireless technologies from
-garage door openers and weather sensors, to WiFi, Bluetooth, ZigBee, and NFC
-all use these bands. The ISM bands were originally intended to isolate noisy
-electromagnetic devices, like microwaves at 2.45 GHz or some medical devices,
-from clean spectrum reserved for communications. In effect, the ISM bands were
-unlicensed wild west zones in the spectrum and any devices designed for it
-needed to be robust to incidental interference. Over time, low power local
-wireless technologies have proliferated on these bands.</p>
+catch-all name, the vast majority of low power local wireless technologies,
+from garage door openers and weather sensors, to WiFi, Bluetooth, ZigBee, and
+NFC, all use these bands. The ISM bands were originally intended to isolate
+noisy electromagnetic devices, like microwaves at 2.45 GHz or some medical
+devices, from clean spectrum reserved for communications. In effect, the ISM
+bands were unlicensed wild west zones in the spectrum and any devices designed
+for it needed to be robust to incidental interference. Over time, low power
+local wireless technologies have proliferated on these bands.</p>
 
 <p>The UHF band has two major ISM allocations. The lower frequency one ranges from
 ~433 to ~435 MHz in ITU region 1 (e.g. Europe, Africa, Middle East), or from
@@ -847,8 +848,8 @@ States. FRS and GMRS use analog ~10 kHz wide frequency modulated audio.</p>
 
 <p>Aircraft use a position reporting system called
 <a href="https://en.wikipedia.org/wiki/Automatic_dependent_surveillance_%E2%80%93_broadcast">ADS-B</a>
-which is centered at 1090 MHz (Mode-S) in the UHF band. The 1090 MHz Mode-S
-transmissions use a 50 kHz wide <a href="https://en.wikipedia.org/wiki/Pulse-position_modulation">pulse position
+which is centered at 1090 MHz (for “Mode-S” transmissions) in the UHF band. The
+1090 MHz Mode-S transmissions use a 50 kHz wide <a href="https://en.wikipedia.org/wiki/Pulse-position_modulation">pulse position
 modulation</a>.</p>
 
 <p>Other notable allocations in the UHF band include those for satellite
@@ -926,7 +927,7 @@ water and oxygen molecules. EHF signals are sensitive to
 <p>The EHF band is used for high data rate, short terrestrial point-to-point
 links, as well as some satellite communications up to about 50 GHz. The
 atmosphere absorbs most EHF frequencies above this, rendering it unusable for
-satellite communication. See the <a href="https://en.wikipedia.org/wiki/Radio_window">radio
+satellite communication — see the <a href="https://en.wikipedia.org/wiki/Radio_window">radio
 window</a>. The
 <a href="https://en.wikipedia.org/wiki/Wireless_Gigabit_Alliance">802.11ad</a> protocol is
 designed to operate around 60 GHz for local high data rate wireless
@@ -936,8 +937,8 @@ communication. Otherwise, much of the EHF band is undeveloped.</p>
 not easy to receive, process, or transmit with off-the-shelf SDR transceivers,
 as their bandwidth is limited to up to about 60 MHz. In general, SDR technology
 lags behind that of conventional hardware with respect to bandwidth, due to
-limited efficiency of analog to digital conversion technology at high sample
-rates, and the computational burden they impose.</p>
+limited efficiency of analog to digital conversion technology at very high
+sample rates, and the computational burden very high sample rates impose.</p>
 
 <p>The <a href="https://en.wikipedia.org/wiki/Terahertz_radiation">tremendously high frequency
 band</a> (THF) spans from 300
@@ -978,7 +979,7 @@ like the bandwidth of various analog and digital modulations, the propagation
 of different radio frequency bands, and the logistics of operating a legal
 transmitter. It also revisits some recurring themes in technology, like the
 trade-offs between analog vs. digital systems, proprietary vs. open standards,
-centralized (VHF/UHF repeaters) vs. decentralized (HF) networks.</p>
+and centralized (VHF/UHF repeaters) vs. decentralized (HF) networks.</p>
 
 <h4 id="getting-a-license">Getting a License</h4>
 
@@ -987,9 +988,9 @@ Class, General Class, and Extra Class. The Technician license grants transmit
 privileges on all amateur radio bands above 30 MHz, whereas the higher license
 levels grant transmit privileges on progressively more spectrum in the lower
 frequency HF band. The Technician license can be obtained by scoring 75% or
-better on a 35 question multiple choice exam, and costs about $15 to take. This
-test is not difficult to pass, as the question and answer pools for each level
-are published in advance.</p>
+better on a 35 question multiple choice exam, and costs about $15 to take.
+These tests are not difficult to pass, as the question and answer pools for
+each level are published in advance.</p>
 
 <p>Studying for the amateur radio license is a great way to learn basic concepts
 about modulations, propagation, antennas, and international spectrum laws. This
@@ -1026,7 +1027,7 @@ shacks</a>.</p>
 though on bad days may share their hand-wavy engineering, they also have a
 history of publishing academic-esque articles on subjects like propagation,
 circuits, and antenna design. Amateur radio is also increasingly intersecting
-with the modern “hacker” culture as well, leading to more amateur radio related
+with the modern “hacker” culture, leading to more amateur radio related
 presentations, hosted license exam sessions, or the establishment of a regular
 <a href="http://conham.org/">contact frequency on VHF</a> at security conferences like
 <a href="https://defcon.org/">DEF CON</a>.</p>
@@ -1039,7 +1040,7 @@ questions, like:</p>
   <li>Should there be more diverse unlicensed “public parks” on the radio spectrum,
 like <a href="https://en.wikipedia.org/wiki/Citizens_band_radio">Citizens Band</a> and
 <a href="https://en.wikipedia.org/wiki/Family_Radio_Service">Family Radio Service</a>,
-but for broadcasting or for digital transmissions?</li>
+but for audio broadcasting or for digital transmissions?</li>
   <li>How does radio contrast to other communication methods that are protected by
 free speech?</li>
 </ul>
@@ -1067,7 +1068,7 @@ are effective basic antennas for receiving and transmitting across the HF band.
 They are better when paired with a <a href="http://vk6ysf.com/unun_9-1.htm">9:1 unun</a>
 impedance transformer, to help match the relatively large <a href="https://en.wikipedia.org/wiki/Antenna_(radio)#Impedance_matching">antenna
 impedance</a> to
-the lower 75 ohm impedance of the RTL-SDR, or to 50 ohm impedance for most
+the lower 75 ohm impedance of the RTL-SDR, or to the 50 ohm impedance of most
 other receivers and transmitters.</p>
 
 <div style="clear: both;"></div>
@@ -1081,7 +1082,7 @@ other receivers and transmitters.</p>
 omnidirectional antenna that looks like a disc on a cone. It has approximately
 10:1 bandwidth, relative to the center frequency. which makes it a good choice
 for the VHF and UHF bands as a receiving antenna. A discone antenna with a
-center frequency of at 50, 75 or 100 MHz is a reasonable size that can be
+center frequency of 50, 75 or 100 MHz is reasonably sized, and can be
 constructed with materials from your local hardware store.</p>
 
 <p>For receiving and transmitting on the 2m and 70cm amateur radio bands on VHF or
@@ -1099,9 +1100,9 @@ benefit from a circularly polarized antenna, like a quadrifilar helix antenna.
 Receiving the ISS as it orbits the Earth at a certain elevation is a lot easier
 with a directional Yagi antenna.</p>
 
-<p>Certain situations, like electrically noisy apartment buildings or lack of
+<p>Certain situations, like electrically noisy apartment buildings or the lack of
 outdoor access, may also call for alternate antennas designs like <a href="https://en.wikipedia.org/wiki/Loop_antenna">magnetic
-loop antennas</a>, which may produce
+loop antennas</a>, which can produce
 better results indoors than an electric field antenna.</p>
 
 <h3 id="rf-upconverter">RF Upconverter</h3>
