fix airspy sample rates in new to sdr guide

--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -1141,12 +1141,12 @@ lower frequency bands.</p>
 higher sample rates than the RTL-SDR:</p>
 
 <ul>
-  <li><a href="http://airspy.com/airspy-mini/">Airspy Mini</a> — 3, 6, or 10 MSPS sample rate,
-24 to 1800 MHz tuning range, 12-bit ADC, $99 USD</li>
+  <li><a href="http://airspy.com/airspy-mini/">Airspy Mini</a> — 3 or 6 MSPS sample rate, 24
+to 1800 MHz tuning range, 12-bit ADC, $99 USD</li>
   <li><a href="http://www.sdrplay.com/">SDRplay RSP</a> — 2 to 10.66 MSPS sample rate, 0.1 to
 2000 MHz tuning range, 12-bit ADC, $149 USD</li>
-  <li><a href="http://airspy.com/airspy-r2/">Airspy R2</a> — 10 MSPS sample rate, 24 to 1800
-MHz tuning range, 12-bit ADC, $199 USD</li>
+  <li><a href="http://airspy.com/airspy-r2/">Airspy R2</a> — 2.5 or 10 MSPS sample rate, 24 to
+1800 MHz tuning range, 12-bit ADC, $199 USD</li>
 </ul>
 
 <p>There are also many SDR transceivers on the market. Note that transmitting with
