--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -141,8 +141,8 @@ hardcoded to their application.</p>
 <p>Software-defined radios offer the allure of instant reconfigurability in every
 dimension: frequency, modulation, and protocol. In theory, you would simply run
 a different program to implement an entirely different radio — whether it’s a
-FM broadcast radio receiver, a UMTS handset, or a Bluetooth device. While there
-are still real-world limitations to this dream, particularly in antennas and in
+FM broadcast receiver, a UMTS handset, or a Bluetooth device. While there are
+still real-world limitations to this dream, particularly in antennas and in
 host processing power, software-defined radio today is a powerful technology
 for building flexible communication systems, exploring the radio frequency
 spectrum, and for protocol research and development.</p>
@@ -151,8 +151,8 @@ spectrum, and for protocol research and development.</p>
 
 <p>A software-defined radio still requires some hardware, but this hardware is
 relegated to just receiving and transmitting radio signals. In total, a
-software-defined radio consists of an antenna, a transmitter and/or receiver,
-and a host computer.</p>
+software-defined radio system consists of an antenna, a transmitter and/or
+receiver, and a host computer.</p>
 
 <p align="center">
 <img src="./images/figure-sdr-receiver.png" />
@@ -187,22 +187,23 @@ with the commoditization of high performance CPUs, and the availability of low
 cost, high rate analog to digital converters (ADCs) and digital to analog
 converters (DACs) that are responsible for sampling and synthesizing the radio
 signal. The inexpensive $20 RTL-SDR dongle — described in more detail below —
-has also played a large role in exposing the technology to many engineers and
+has also played a role in exposing the technology to many engineers and
 hobbyists.</p>
 
 <p>However, the software of software-defined radio has yet to catch up to the
 hardware. Much of it is scattered across esoteric one-off decoding programs,
-trapped in frameworks bloated with boilerplate and dependencies, or proprietary
-Windows software. There has been little consolidation of common code by the way
-of libraries, and even less effort on good documentation.  Fortunately, the
-tide seems to be turning. Lightweight signal processing libraries are gaining
-traction, modern open source SDR applications are cropping up, and the
-developer communities surrounding SDR are growing.</p>
+trapped in frameworks bloated with boilerplate and dependencies, or confined to
+proprietary Windows software. There has been little consolidation of common
+code by the way of libraries, and even less effort on good documentation.
+Fortunately, the tide seems to be turning. Lightweight signal processing
+libraries are gaining traction, modern open source SDR applications are
+cropping up, and the developer communities surrounding SDR are growing.</p>
 
 <p>The rest of this guide covers the details of getting started with SDR
 receivers, including hardware, software, a tour of the frequency bands, next
 steps, and additional resources. Most of this introduction focuses on SDR
-receivers, but SDR transmitters are covered briefly in the next steps section.</p>
+receivers, but SDR transmitters are touched on briefly in the next steps
+section.</p>
 
 <h2 id="hardware">Hardware</h2>
 
@@ -221,15 +222,15 @@ receivers, and in the 20 to 60 MHz range for the more advanced SDR
 transceivers.  Bandwidth is different from tuning frequency; rather, more
 bandwidth means that the SDR receiver can capture a wider window of signals
 simultaneously when tuned to a particular frequency. In some cases, more
-bandwidth is required to capture a very wide signal, like a 6 MHz wide DVB-T
-channel.</p>
+bandwidth is required to capture a very wide signal, like a 6 MHz wide
+<a href="https://en.wikipedia.org/wiki/DVB-T">DVB-T</a> channel.</p>
 
 <p>The sample rate of an SDR receiver is the rate the radio signal is sampled by
 the receiver and streamed to the host. Sample rate is directly related to the
 bandwidth, and while bandwidth is ultimately the specification of interest,
 SDRs are typically described by their sample rate, as it is the underlying
 design parameter. An SDR’s effective bandwidth is usually slightly less than
-its sample rate. Sample rate also dictates the computational burden of the
+its sample rate. Sample rate also dictates the computational burden on the
 host: the wider the receive bandwidth, the more samples per second are required
 to represent it, and consequently, the more bus throughput is required to
 stream it to the host, and the more host computational power is required to
@@ -255,7 +256,7 @@ paired with a 125 MHz RF upconverter, so that it can pick up 0 to 30 MHz at the
 offset frequencies of 125 to 155 MHz.</p>
 
 <p>While bandwidth, resolution, and tuning range are the basic specifications of
-an SDR receiver, other figure of merits and design considerations can
+an SDR receiver, other figures of merit and design considerations can
 dramatically affect an SDR receiver’s fidelity and usability.</p>
 
 <h3 id="rtl-sdr-dongle">RTL-SDR dongle</h3>
@@ -267,9 +268,9 @@ and audio broadcast receiver, particularly for the
 <a href="https://en.wikipedia.org/wiki/Digital_audio_broadcasting">DAB/DAB+</a> protocols,
 which are used in parts of Europe and Asia. Eventually, <a href="http://rtlsdr.org/#history_and_discovery_of_rtlsdr">a few developers
 discovered</a> that the
-demodulating and decoding for the DAB+ and FM receiver modes was actually
-implemented in the closed-source software itself, and in those modes, the
-underlying <a href="http://www.realtek.com.tw/products/productsView.aspx?Langid=1&amp;PFid=35&amp;Level=4&amp;Conn=3&amp;ProdID=257">Realtek
+demodulating and decoding for the DAB+ and FM receiver modes of this device was
+actually implemented in the closed-source software itself, and in those modes,
+the underlying <a href="http://www.realtek.com.tw/products/productsView.aspx?Langid=1&amp;PFid=35&amp;Level=4&amp;Conn=3&amp;ProdID=257">Realtek
 RTL2832U</a>
 chip streamed raw samples over USB. In other words, the dongle was a
 software-defined radio receiver in those modes.</p>
@@ -317,8 +318,8 @@ applications demand different requirements in these properties.</p>
 
 <p>An antenna’s physical size is typically proportional to the wavelengths it is
 designed to receive. For example, antennas designed for reception at 15 MHz
-tend to be much larger than those intended for 100 MHz, and especially larger
-than a WiFi antenna intended for 2.4 GHz.</p>
+tend to be much larger than those designed for 100 MHz, and especially larger
+than a WiFi antenna designed for 2.4 GHz.</p>
 
 <figure class="float-right">
 <img src="./images/rtlsdr-stock-antenna-thumb.jpg" />
@@ -346,7 +347,7 @@ of any dedicated antenna, it should be placed outdoors and at high elevation.</p
 <p>For getting started with SDR, without initially investing too much time, money,
 or real estate for an antenna, the RTL-SDR Blog’s <a href="http://amzn.to/1SLPS6F">RTL-SDR dongle and antenna
 package</a> is probably the all-around best entry level
-kit. The included tall 1.5m telescopic antenna performs very decently for VHF
+kit. The included tall 1.5m telescopic antenna performs decently for VHF
 signals, even when used indoors, and the shorter 20cm telescopic antenna covers
 much of the UHF band, so these two antennas can adjusted to most of the
 operating range of the RTL-SDR. All of the VHF LuaRadio examples (WBFM, NBFM,
@@ -359,17 +360,17 @@ antenna indoors.</p>
 
 <p>Some of the earliest SDR software has its origins in the late 90s, with dial-up
 <a href="https://en.wikipedia.org/wiki/Softmodem">software modems</a> (e.g. the U.S.
-Robotics “WinModem”) that implemented the majority of the modem in software
+Robotics “WinModem”) that implemented the majority of the modem in software,
 rather than dedicated hardware, allowing for more inexpensive hardware. Other
 early SDR software was software support for amateur radio digital modes (FSK,
 PSK31, PACTOR, AX.25, etc.) that were modulated in the audio band.  Amateur
-radio operators could interface the audio of their radio transceivers to the
+radio operators could interface the audio of their radio transceivers to their
 PC’s sound card, and use software to receive or transmit these digital modes.</p>
 
 <p>Sound card operated digital modes are still popular in the amateur radio
-community, and there is an abundance of older decoding software from this era
-still in use or under maintenance. Some of this software has been retrofitted
-to support modern I/Q sampling SDR receivers like the RTL-SDR.</p>
+community today, and there is an abundance of older decoding software from this
+era in use or under maintenance. Some of this software has been retrofitted to
+support modern I/Q sampling SDR receivers like the RTL-SDR.</p>
 
 <p>Today, SDR software seems to broadly fall under five categories: waterfall
 receivers, standalone decoders, frameworks, libraries, and web interfaces.
@@ -379,11 +380,11 @@ Below is a Linux-biased sampling of active SDR software projects.</p>
 
 <p>Waterfall receivers are characterized by a real-time vertical
 <a href="https://en.wikipedia.org/wiki/Spectrogram">spectrogram</a>, showing the frequency
-spectrum of the SDR receiver’s passband over time.  Waterfall receivers
+spectrum of the SDR receiver’s passband over time.  Waterfall receivers also
 simulate many functions of a wideband hardware RF receiver, like tuning,
-demodulation modes, filters, and listening to or recording demodulated audio.
-Waterfall receivers are useful for exploring the RF spectrum and selectively
-demodulating parts of it.</p>
+demodulation modes, filters, and listening to demodulated audio.  Waterfall
+receivers are useful for exploring the RF spectrum and selectively demodulating
+parts of it.</p>
 
 <div align="center">
 <figure>
@@ -444,7 +445,7 @@ applications.</p>
 
 <p>Web interfaces provide a browser frontend to an SDR, often with server-side
 processing for demodulation and decoding, and a client-side waterfall and
-audio. This is like a waterfall receiver accessible through a browser.</p>
+audio. They are like a waterfall receiver accessible through a browser.</p>
 
 <ul>
 <li><a href="https://github.com/simonyiszk/openwebrx"><i class="fa fa-github" aria-hidden="true"></i> OpenWebRx</a></li>
@@ -469,7 +470,7 @@ equivalent to a slice of the VHF band. This is because electromagnetic waves of
 different radio frequencies have different interactions with the atmosphere and
 earth, and this affects their propagation. Propagation on certain bands may be
 sensitive to time of day, space weather, and solar weather. Propagation on
-other radio bands may depend mostly on line of sight, and may be only sensitive
+other radio bands may depend mostly on line of sight, and may only be sensitive
 to terrestrial weather. The atmosphere may also present more or less opacity
 for different frequencies to outer space, depending on the radio band.  In
 effect, the various radio bands offer varying locality, which enables different
@@ -957,7 +958,7 @@ band.</p>
 <p>A great way to further develop radio fundamentals is to become an amateur radio
 operator. Amateur radio is the hobby of making radio contacts, experimenting
 with radio hardware and antennas, and for some, providing backup communications
-in the case of an emergency that compromises local infrastructure.</p>
+in case of an emergency that compromises local infrastructure.</p>
 
 <p>Portions throughout the RF spectrum have been set aside by international
 agreements expressly for amateur radio use. An amateur radio license grants the
@@ -1018,9 +1019,9 @@ database</a></li>
 geeks, electronics tinkerers, and preppers. Some enjoy it simply for casual
 conversation with like-minded radio enthusiasts on their commute to or from
 work. Others are in it purely for the decentralized, self-sufficient means of
-communications it enables, perhaps for survival preparedness or volunteering
-for emergency communications. And many hams tinker with antennas, low power
-transceivers, installing repeaters, or even building dedicated <a href="https://en.wikipedia.org/wiki/Radio_shack">ham
+communications it enables, perhaps for survival preparedness or for
+volunteering for emergency communications. And many hams tinker with antennas,
+low power transceivers, installing repeaters, or even building dedicated <a href="https://en.wikipedia.org/wiki/Radio_shack">ham
 shacks</a>.</p>
 
 <p>Hams were some of the original
@@ -1098,8 +1099,8 @@ resonant magnetic loop antenna, which is substantially smaller in size than its
 equivalently performing dipole or monopole electric field antenna. Receiving
 circularly polarized radio waves from satellites, e.g. a weather satellite,
 benefit from a circularly polarized antenna, like a quadrifilar helix antenna.
-Receiving the ISS as it orbits the Earth at a certain elevation is a lot easier
-with a directional Yagi antenna.</p>
+Receiving the ISS, as it orbits the Earth at a certain elevation, is a lot
+easier with a directional Yagi antenna.</p>
 
 <p>Certain situations, like electrically noisy apartment buildings or the lack of
 outdoor access, may also call for alternate antennas designs like <a href="https://en.wikipedia.org/wiki/Loop_antenna">magnetic
