--- a/examples/rtlsdr-pocsag.html
+++ b/examples/rtlsdr-pocsag.html
@@ -28,7 +28,7 @@
         <nav class="menu">
   <h1 class="title"><a href="..">LuaRadio</a></h1>
   <p align="center">
-      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/ChangeLog.md"><code class="version">v0.1.2</code></a>
+      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/ChangeLog.md"><code class="version">v0.2.0</code></a>
   </p>
   <div class="toc">
     <ul>
@@ -41,6 +41,7 @@
                 <li><a href="../docs/embedding-luaradio.html">Embedding LuaRadio</a></li>
                 <li><a href="../docs/architecture.html">Architecture</a></li>
                 <li><a href="../docs/comparison-gnuradio.html">Comparison to GNU Radio</a></li>
+                <li><a href="../docs/supported-hardware.html">Supported Hardware</a></li>
             </ul>
         </li>
         <li><a href="../docs/reference-manual.html">Reference Manual</a></li>
@@ -70,7 +71,7 @@
 <nav class="scroll-toc">
   <h1 class="title"><a data-scroll href="#top">LuaRadio</a></h1>
   <p align="center">
-    <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.1.2</code></a>
+    <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.2.0</code></a>
   </p>
   <div class="toc">
     <span class="page-title"><a data-scroll href="#top">POCSAG Receiver Example</a></span>
