--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -28,7 +28,7 @@
         <nav class="menu">
   <h1 class="title"><a href=".">LuaRadio</a></h1>
   <p align="center">
-      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/ChangeLog.md"><code class="version">v0.2.0</code></a>
+      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/ChangeLog.md"><code class="version">v0.3.0</code></a>
   </p>
   <div class="toc">
     <ul>
@@ -71,7 +71,7 @@
 <nav class="scroll-toc">
   <h1 class="title"><a data-scroll href="#top">LuaRadio</a></h1>
   <p align="center">
-    <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.2.0</code></a>
+    <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.3.0</code></a>
   </p>
   <div class="toc">
     <span class="page-title"><a data-scroll href="#top">New to SDR?</a></span>
@@ -352,8 +352,7 @@ kit. The included tall 1.5m telescopic antenna performs decently for VHF
 signals, even when used indoors, and the shorter 20cm telescopic antenna covers
 much of the UHF band, so these two antennas can adjusted to most of the
 operating range of the RTL-SDR. All of the VHF LuaRadio examples (WBFM, NBFM,
-AX.25, POCSAG, RDS) have been run successfully with this tall 1.5m telescopic
-antenna indoors.</p>
+AX.25, POCSAG, RDS) can be run with the tall 1.5m telescopic antenna indoors.</p>
 
 <div style="clear: both;"></div>
 
@@ -362,11 +361,11 @@ antenna indoors.</p>
 <p>Some of the earliest SDR software has its origins in the late 90s, with dial-up
 <a href="https://en.wikipedia.org/wiki/Softmodem">software modems</a> (e.g. the U.S.
 Robotics “WinModem”) that implemented the majority of the modem in software,
-rather than dedicated hardware, allowing for more inexpensive hardware. Other
-early SDR software was software support for amateur radio digital modes (FSK,
-PSK31, PACTOR, AX.25, etc.) that were modulated in the audio band.  Amateur
-radio operators could interface the audio of their radio transceivers to their
-PC’s sound card, and use software to receive or transmit these digital modes.</p>
+allowing for more inexpensive hardware. Other early SDR software was software
+support for amateur radio digital modes (FSK, PSK31, PACTOR, AX.25, etc.) that
+were modulated in the audio band.  Amateur radio operators could interface the
+audio of their radio transceivers to their PC’s sound card, and use software to
+receive or transmit these digital modes.</p>
 
 <p>Sound card operated digital modes are still popular in the amateur radio
 community today, and there is an abundance of older decoding software from this
@@ -433,7 +432,7 @@ frameworks.</p>
 
 <p>Frameworks offer a suite of operations and an API to flexibly define custom
 receivers, transmitters, or signal processing in general. These are useful for
-rapidly prototyping SDR projects, and may also be integrated into standalone
+rapidly prototyping SDR projects, but may also be integrated into standalone
 applications.</p>
 
 <ul>
