update email address

--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -65,7 +65,7 @@
     </ul>
   </div>
   <p align="center">
-    <a style="font-size: 1.4rem;" href="mailto:vsergeev@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> vsergeev@gmail.com</a>
+    <a style="font-size: 1.4rem;" href="mailto:v@sergeev.io"><i class="fa fa-envelope-o" aria-hidden="true"></i> v@sergeev.io</a>
   </p>
 </nav>
 <nav class="scroll-toc">
@@ -1229,7 +1229,7 @@ worldwide spectrum allocations.</p>
 
 <h2 id="comments">Comments</h2>
 
-<p>Feel free to email me at <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#118;&#115;&#101;&#114;&#103;&#101;&#101;&#118;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#118;&#115;&#101;&#114;&#103;&#101;&#101;&#118;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a> with
+<p>Feel free to email me at <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#118;&#064;&#115;&#101;&#114;&#103;&#101;&#101;&#118;&#046;&#105;&#111;">&#118;&#064;&#115;&#101;&#114;&#103;&#101;&#101;&#118;&#046;&#105;&#111;</a> with
 any comments, corrections, or questions.</p>
 
 
