--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="menu">
   <h1 class="title"><a href=".">LuaRadio</a></h1>
   <p align="center">
-      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/ChangeLog.md"><code class="version">v0.4.0</code></a>
+      <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio/blob/master/ChangeLog.md"><code class="version">v0.5.0</code></a>
   </p>
   <div class="toc">
     <ul>
@@ -71,7 +71,7 @@
 <nav class="scroll-toc">
   <h1 class="title"><a data-scroll href="#top">LuaRadio</a></h1>
   <p align="center">
-    <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.4.0</code></a>
+    <a href="https://github.com/vsergeev/luaradio"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="https://github.com/vsergeev/luaradio"><code class="version">v0.5.0</code></a>
   </p>
   <div class="toc">
     <span class="page-title"><a data-scroll href="#top"></a></span>
@@ -107,7 +107,7 @@ Radio</a>.</p>
 <h2 id="example">Example</h2>
 
 <p align="center">
-<i>Mono Wideband FM Broadcast Radio Receiver</i>
+<i>Wideband FM Broadcast Radio Receiver</i>
 </p>
 
 <p align="center">
