update receiver specs in new to sdr guide

--- a/new-to-sdr.html
+++ b/new-to-sdr.html
@@ -425,7 +425,7 @@ frameworks.</p>
 <li><a href="https://github.com/gnuradio/volk"><i class="fa fa-github" aria-hidden="true"></i> VOLK</a></li>
 <li><a href="https://github.com/jgaeddert/liquid-dsp"><i class="fa fa-github" aria-hidden="true"></i> liquid-dsp</a></li>
 <li><a href="https://github.com/simonyiszk/csdr"><i class="fa fa-github" aria-hidden="true"></i> csdr</a> (also a standalone tool)</li>
-
+&lt;/li&gt;
 </ul>
 
 <h3 id="frameworks">Frameworks</h3>
@@ -1143,12 +1143,14 @@ lower frequency bands.</p>
 higher sample rates than the RTL-SDR:</p>
 
 <ul>
-  <li><a href="http://airspy.com/airspy-mini/">Airspy Mini</a> — 3 or 6 MSPS sample rate, 24
-to 1800 MHz tuning range, 12-bit ADC, $99 USD</li>
-  <li><a href="http://www.sdrplay.com/">SDRplay RSP</a> — 2 to 10.66 MSPS sample rate, 0.1 to
-2000 MHz tuning range, 12-bit ADC, $149 USD</li>
+  <li><a href="http://airspy.com/airspy-mini/">Airspy Mini</a> — 3, 6, or 10 MSPS sample rate,
+24 to 1800 MHz tuning range, 12-bit ADC, $99 USD</li>
   <li><a href="http://airspy.com/airspy-r2/">Airspy R2</a> — 2.5 or 10 MSPS sample rate, 24 to
-1800 MHz tuning range, 12-bit ADC, $199 USD</li>
+1800 MHz tuning range, 12-bit ADC, $169 USD</li>
+  <li><a href="http://www.sdrplay.com/rsp1/">SDRplay RSP1</a> — 2 to 10.66 MSPS sample rate,
+100 kHZ to 2000 MHz tuning range, 12-bit ADC, $99 USD</li>
+  <li><a href="http://www.sdrplay.com/rsp2/">SDRplay RSP2</a> — 2 to 10.66 MSPS sample rate,
+10 kHz to 2000 MHz tuning range, 12-bit ADC, $169 USD</li>
 </ul>
 
 <p>There are also many SDR transceivers on the market. Note that transmitting with
@@ -1229,7 +1231,7 @@ worldwide spectrum allocations.</p>
 
 <h2 id="comments">Comments</h2>
 
-<p>Feel free to email me at <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#118;&#064;&#115;&#101;&#114;&#103;&#101;&#101;&#118;&#046;&#105;&#111;">&#118;&#064;&#115;&#101;&#114;&#103;&#101;&#101;&#118;&#046;&#105;&#111;</a> with
+<p>Feel free to email me at <a href="mailto:v@sergeev.io">v@sergeev.io</a> with
 any comments, corrections, or questions.</p>
 
 
